--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.6.8",
+    "crypto-js": "^4.2.0",
     "next": "14.2.3",
     "next-qrcode": "^2.5.1",
     "react": "^18",
